--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -32,5 +32,8 @@ Style/FrozenStringLiteralComment:
 Style/ClassAndModuleChildren:
   Enabled: false
 
+Style/StringLiterals:
+  EnforcedStyle: double_quotes
+
 Rails:
   Enabled: true
